added front of the front

--- a/alembic.ini
+++ b/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///ips.db 
+sqlalchemy.url = postgres://plasma:plasma@localhost/plasma 
 
 
 [post_write_hooks]
